<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voudou Snafu</string>

    <string name="button_head">Head</string>
    <string name="button_left_hand">Left Hand</string>
    <string name="button_right_hand">Right Hand</string>
    <string name="button_body">Body</string>
    <string name="button_right_leg">Right Leg</string>
    <string name="button_left_leg">Left Leg</string>
    <string name="button_play">Play</string>
    <string name="name">Name</string>
    <string name="error">Error submitting score.</string>
    <string name="good_guys_won">Good triumphs!</string>
    <string name="bad_guys_won">Evil prevails!</string>
    <string name="open_sandbox_fire">Fire Card</string>
    <string name="open_sandbox_love">Love Card</string>
    <string name="open_sandbox_progression">Progression</string>
    <string name="open_sandbox_protect">Protect Card</string>
    <string name="open_sandbox_disrupt">Disrupt Card</string>
    <string name="open_libgdx_sandbox">LibGDX Sandbox</string>
    <string name="clear_button_text">Clear Drawing</string>
    <string name="waiting">Waiting for remaining players&#8230;</string>

</resources>
